2004-03-06  Lars Clausen  <lars@raeder.dk>

	* lib/arrows.h (DEFAULT_ARROW_SIZE): Downed default arrow size to
	0.5, as per poll.

	* lib/font.c: Simple cleanup system for layout cache removes any
	layout that hasn't been used for 10 minutes, but only during idle
	time. 

2004-03-05  Lars Clausen  <lars@raeder.dk>

	* sheets/Electric.sheet.in: Added patch from padro@lsi.upc.es
	(lluis padro) (#130887): Extended Electric shapes with vertical
	versions. 

	* sheets/Cybernetics.sheet.in: Normalize shape descriptions (never
	start with "Create a" or "A", always capitalize first word).

	* objects/standard/ellipse.c: Patch from Grégoire Dooms
	<dooms@info.ucl.ac.be>: Add extra connection point in center of
	ellipse.  Additionally added a handle in the center, and resize is
	now around the center.

	* configure.in: 
	* sheets/Makefile.am (SUBDIRS): 
	* sheets/IsometricMap.sheet.in: 
	* shapes/Map/Isometric/*
	* shapes/Makefile.am (SUBDIRS): Added Isometric shapes.

2004-03-04  Lars Clausen  <lars@raeder.dk>

	* lib/Makefile.am: 
	* lib/pixmaps/Makefile.am: 
	* configure.in: 
	Better installation handling of pixmaps.
	
	* lib/diagdkrenderer.c: 
	* lib/diagtkfontsel.h (struct _DiaGtkFontSelectionClass): 
	* lib/diagtkfontsel.c (dia_gtk_font_selection_show_available_fonts): 
	Constness fixes.

2004-03-03  Lars Clausen  <lars@raeder.dk>

	* lib/diagtkfontsel.h (struct _DiaGtkFontSelection): 
	* lib/diagdkrenderer.c: 
	* lib/diasvgrenderer.c:
	* lib/dialibartrenderer.c:
	* lib/diainteractiverenderer.c: 
	* lib/prop_text.c (multistringprop_handle_key): 
	* lib/dia_dirs.c: 
	* lib/dia_image.c (dia_image_rgba_data): 
	* lib/widgets.c: 
	* lib/diagramdata.c (layer_set_object_list): 
	* lib/font.h: 
	* lib/font.c: 
	Getting rid of compile warnings.

	* lib/widgets.c: Handle destroy properly, i.e. unref the two extra
	images.  Also remove unused decls.

2004-03-02  Lars Clausen  <lars@raeder.dk>

	* lib/widgets.h: 
	* lib/widgets.c (dia_size_selector_init): Add images to the size