@@ -1,0 +1,60 @@
+
+shapedir = $(pkgdatadir)/shapes
+
+isometricdir = $(shapedir)/Map/Isometric
+
+SHAPES = \
+Block1.png \
+Block1.shape \
+Block2.png \
+Block2.shape \
+Block3.png \
+Block3.shape \
+Block4.png \
+Block4.shape \
+Block5.png \
+Block5.shape \
+Block6.png \
+Block6.shape \
+Block7.png \
+Block7.shape \
+Car1.png \
+Car1.shape \
+Car2.png \
+Car2.shape \
+Corner1.png \
+Corner1.shape \
+Corner2.png \
+Corner2.shape \
+Crossroads.png \
+Crossroads.shape \
+Elevated.png \
+Elevated.shape \
+Factory.png \
+Factory.shape \
+FootBridge.png \
+FootBridge.shape \
+OneWay.png \
+OneWay.shape \
+RedCar.png \
+RedCar.shape \
+River.png \
+River.shape \
+Road1.png \
+Road1.shape \
+Roof1.png \
+Roof1.shape \
+StraightRoad1.png \
+StraightRoad1.shape \
+T-Junction.png \
+T-Junction.shape \
+Train1.png \
+Train1.shape \
+Train2.png \
+Train2.shape \
+Tree1.png \
+Tree1.shape
+
+EXTRA_DIST = $(SHAPES)
+
+isometric_DATA = $(SHAPES)
